fix: long text overflow issue

--- a/packages/hoppscotch-common/assets/scss/styles.scss
+++ b/packages/hoppscotch-common/assets/scss/styles.scss
@@ -571,3 +571,8 @@ details[open] summary .indicator {
   @apply rounded;
   @apply border-0;
 }
+
+// it fixes the overflow issue on flex items
+.flex {
+  min-width: 0;
+}
